Stretched imaged fixed

--- a/src/www/components/actioncard/ActionCard.scss
+++ b/src/www/components/actioncard/ActionCard.scss
@@ -30,6 +30,7 @@
       max-width: 4rem;
       min-height: 4rem;
       min-width: 4rem;
+      object-fit: cover;
     }
     &_container {
       > h1 {
